--- a/src/app/home/Slider/styles.scss
+++ b/src/app/home/Slider/styles.scss
@@ -11,8 +11,8 @@
 
 .sections__wrapper {
     position: relative;
-    height: 600px;
     width: 100vw;
+    aspect-ratio: 1 / 0.38;
     margin-block: 20px;
 }
 
