--- a/src/components/Products/styles.scss
+++ b/src/components/Products/styles.scss
@@ -2,7 +2,24 @@
 
 .products {
     width: 100vw;
-    @include grid(repeat(4, 1fr), unset);
-    gap: 20px;
     margin-block: 20px;
+
+    .container {
+        @include grid(repeat(5, 1fr), unset);
+        gap: 20px;
+
+        @include media-max(1200px) {
+            grid-template-columns: repeat(4, 1fr);
+        }
+
+        @include media-max(900px) {
+            grid-template-columns: repeat(3, 1fr);
+            gap: 15px;
+        }
+
+        @include media-max(650px) {
+            grid-template-columns: repeat(2, 1fr);
+            gap: 10px;
+        }
+    }
 }
