fix: query margin

--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -2,6 +2,7 @@
 
 .footer {
     width: 100%;
+    margin-top: 20px;
     padding-block: 40px;
     background: linear-gradient(135deg, #b0dae6, #ffd6c7 60%, #ffd6c7);
 
