--- a/src/styles/base/_core.scss
+++ b/src/styles/base/_core.scss
@@ -15,12 +15,12 @@
 
 html,
 body {
-    min-height: 100%;
+    min-height: 100vh;
     overflow-x: hidden;
 }
 
 body {
-    @include flex(column, flex-start, flex-start);
+    @include flex(column, flex-start, space-between);
 
     & > main {
         flex: 1 1 auto;
