--- a/src/components/Card/styles.scss
+++ b/src/components/Card/styles.scss
@@ -48,6 +48,7 @@
                     transition: all 0.2s ease;
                 }
 
+                &.active,
                 &:hover {
                     path {
                         stroke: $green;
