--- a/src/app/product/[slug]/styles.scss
+++ b/src/app/product/[slug]/styles.scss
@@ -1,3 +1,136 @@
+@import "@/styles/abstract/mixins", "@/styles/abstract/variables";
+
 .product-details-page {
     padding-block: 20px;
+
+    .container {
+        @include flex(column, flex-start, flex-start);
+        gap: 20px;
+    }
+
+    img {
+        max-width: 100%;
+        max-height: 100%;
+    }
+}
+
+.product-details {
+    @include flex(row, flex-start, flex-start);
+    width: 100%;
+    gap: 50px;
+    position: relative;
+
+    @include media-max(786px) {
+        flex-direction: column;
+    }
+
+    &__img {
+        position: relative;
+        width: 50%;
+        border-radius: 4px;
+        overflow: hidden;
+
+        @include media-max(786px) {
+            width: 100%;
+        }
+
+        @media screen and (any-hover: hover) {
+            &:hover {
+                .full-screen {
+                    opacity: 1;
+                }
+            }
+        }
+
+        .full-screen {
+            @include center;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            width: 40px;
+            height: 40px;
+            border-radius: 4px;
+            background-color: $white;
+            opacity: 0;
+            cursor: pointer;
+            transition: all 0.2s ease;
+
+            svg {
+                width: 25px;
+                height: 25px;
+
+                path {
+                    fill: rgba($color: $black, $alpha: 0.5);
+                }
+            }
+        }
+
+        img {
+            width: 100%;
+            aspect-ratio: 1 / 1;
+        }
+    }
+
+    &__content {
+        @include flex(column, flex-start, flex-start);
+        gap: 20px;
+        width: 50%;
+
+        @include media-max(786px) {
+            width: 100%;
+        }
+    }
+
+    &__row {
+        @include flex(row, center, space-between);
+        gap: 20px;
+        width: 100%;
+
+        &.details-footer {
+            margin-top: 40px;
+        }
+
+        svg.heart {
+            width: 28px;
+            height: 28px;
+            flex-shrink: 0;
+            cursor: pointer;
+
+            path {
+                transition: all 0.2s ease;
+            }
+
+            &:hover {
+                path {
+                    stroke: $green;
+                }
+            }
+
+            &.active {
+                path {
+                    fill: $red;
+                    stroke: none;
+                }
+            }
+        }
+    }
+
+    &__price {
+        @include font(24px, 600, 120%, $black);
+    }
+
+    &__btn {
+        @include center;
+        width: 100%;
+        max-width: 360px;
+        height: 48px;
+        background-color: rgba($color: $yellow, $alpha: 0.7);
+        border-radius: 4px;
+        font-weight: 600;
+        transition: all 0.2s ease;
+
+        &:hover {
+            background-color: $yellow;
+        }
+    }
 }
