fix: product details id

--- a/src/app/product/[slug]/styles.scss
+++ b/src/app/product/[slug]/styles.scss
@@ -115,6 +115,10 @@
         }
     }
 
+    &__id {
+        width: 100%;
+    }
+
     &__price {
         @include font(24px, 600, 120%, $black);
     }
